@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: fCmd.test,v 1.17 2002/07/01 14:35:10 dgp Exp $
+# RCS: @(#) $Id: fCmd.test,v 1.18 2002/07/02 12:16:05 vincentdarley Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -2181,11 +2181,11 @@ if {[string equal $tcl_platform(platform) "windows"]} {
 
 test fCmd-28.1 {file link} {hasLinks} {
     list [catch {file link} msg] $msg
-} {1 {wrong # args: should be "file link ?-linktype? source ?target?"}}
+} {1 {wrong # args: should be "file link ?-linktype? linkname ?target?"}}
 
 test fCmd-28.2 {file link} {hasLinks} {
     list [catch {file link a b c d} msg] $msg
-} {1 {wrong # args: should be "file link ?-linktype? source ?target?"}}
+} {1 {wrong # args: should be "file link ?-linktype? linkname ?target?"}}
 
 test fCmd-28.3 {file link} {hasLinks} {
     list [catch {file link abc b c} msg] $msg
